--- a/Concentration/Base.lproj/Main.storyboard
+++ b/Concentration/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hHe-84-U1M">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,6 +10,38 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Concentration Theme Choice Table View Controller-->
+        <scene sceneID="zvc-KS-oFM">
+            <objects>
+                <tableViewController id="6C8-B9-hxp" customClass="ConcentrationThemeChoiceTableViewController" customModule="Concentration" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="pVu-Qq-ubQ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="Imx-9E-cVD">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Imx-9E-cVD" id="GUn-9t-mvy">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.666666666666664"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="6C8-B9-hxp" id="oMt-6U-umX"/>
+                            <outlet property="delegate" destination="6C8-B9-hxp" id="6Ov-WN-B6z"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="NXQ-Vb-cbo"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="ChooseTheme" id="4Kq-zV-M6U"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0TS-qY-BJl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="231.19999999999999" y="127.83251231527095"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -19,7 +51,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sMQ-vn-JBE">
-                                <rect key="frame" x="20" y="44" width="335" height="48"/>
+                                <rect key="frame" x="20" y="88" width="335" height="48"/>
                                 <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                 <color key="textColor" red="0.99404761900000005" green="0.9880952381" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -35,7 +67,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hKQ-f4-vS1">
-                                <rect key="frame" x="20" y="100" width="335" height="566"/>
+                                <rect key="frame" x="8" y="144" width="359" height="522"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="Z5S-8U-vDx" appends="YES" id="JZj-ox-DKd"/>
@@ -58,14 +90,14 @@
                             <constraint firstItem="eJn-j5-jq7" firstAttribute="top" secondItem="gPJ-OF-tsX" secondAttribute="bottom" constant="8" symbolic="YES" id="LWb-4k-VeJ"/>
                             <constraint firstItem="eJn-j5-jq7" firstAttribute="top" relation="greaterThanOrEqual" secondItem="gPJ-OF-tsX" secondAttribute="bottom" constant="8" symbolic="YES" id="MXK-j7-giq"/>
                             <constraint firstItem="eJn-j5-jq7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="T4C-Wd-QE6"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hKQ-f4-vS1" secondAttribute="trailing" constant="20" id="WNM-Df-lTk"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hKQ-f4-vS1" secondAttribute="trailing" constant="8" id="WNM-Df-lTk"/>
                             <constraint firstItem="gPJ-OF-tsX" firstAttribute="top" secondItem="hKQ-f4-vS1" secondAttribute="bottom" constant="8" symbolic="YES" id="Wfa-67-LcN"/>
                             <constraint firstItem="sMQ-vn-JBE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Zzk-M5-4Dx"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sMQ-vn-JBE" secondAttribute="trailing" constant="20" id="cRO-kV-mer"/>
                             <constraint firstItem="sMQ-vn-JBE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ePV-Y0-RyQ"/>
                             <constraint firstItem="gPJ-OF-tsX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="hgs-9e-6GE"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="eJn-j5-jq7" secondAttribute="trailing" constant="20" id="lar-rm-0Hf"/>
-                            <constraint firstItem="hKQ-f4-vS1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="s4z-Lc-RAe"/>
+                            <constraint firstItem="hKQ-f4-vS1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="s4z-Lc-RAe"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -82,7 +114,25 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="132.26600985221674"/>
+            <point key="canvasLocation" x="1079.2" y="132.26600985221674"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="vtP-js-4mb">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hHe-84-U1M" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="wyy-2N-vjt">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="6C8-B9-hxp" kind="relationship" relationship="rootViewController" id="hgF-Ln-rzS"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0bE-nv-63g" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-711.20000000000005" y="127.83251231527095"/>
         </scene>
     </scenes>
 </document>
